ajuste de factura

--- a/reports/invoice_report.xml
+++ b/reports/invoice_report.xml
@@ -19,24 +19,24 @@
                 <t t-if="not o or not 'company_id' in o">
                     <t t-set="company" t-value="res_company"/>
                 </t>
-                <table style=" border:0px solid white; width:100%; width:100%; ">
+                <table style=" border:0px solid white; width:100%; ">
                     <tr>
                         <td  style="width:22%; "><br/><br/>
-                           <img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % to_text(company.logo)" style="max-height: 50px;" align="bottom"/>
+                           <img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % to_text(company.logo)" style="max-height: 150px;" align="bottom"/>
                         </td>
-                        <td style="width:48%;font-family:Arial, sans-serif;font-size:9pt;">
-                            <b style="font-family:Arial, sans-serif;font-size:20pt;" t-esc="company.name"/><br/>
-                             <b style="font-family:Arial, sans-serif;font-size:9pt;">RFC. :   </b>
+                        <td style="width:48%;font-family:Arial, sans-serif;font-size:16pt;">
+                            <b style="font-family:Arial, sans-serif;font-size:26pt;" t-esc="company.name"/><br/>
+                             <b style="font-family:Arial, sans-serif;font-size:16pt;">RFC. :   </b>
                             <span t-field="o.company_id.company_registry"/><br/>
-                            <span t-field="o.company_id.street_name"/><span t-field="o.company_id.street_number"/><br/>
+                            <span t-field="o.company_id.street_name"/> <span t-field="o.company_id.street_number"/><br/>
                             <span t-field="o.company_id.street2"/><br/>
-                            <span t-field="o.company_id.state_id.name"/><span style="text-align:right;" t-field="o.company_id.zip"/><br/>
+                            <span t-field="o.company_id.state_id.name"/> <span style="text-align:right;" t-field="o.company_id.zip"/><br/>
                         </td>
-                        <td style="width:30%;font-family:Arial, sans-serif;font-size:9pt;">
+                        <td style="width:30%;font-family:Arial, sans-serif;font-size:16pt;">
                             <table style=" border:0px solid white; width:100%; ">
                                 <tr style="background:#bdbdbd;">
                                     <td>
-                                        <b style="text-align:center;font-size:9pt;">Factura</b>
+                                        <b style="text-align:center;font-size:16pt;">Factura</b>
                                     </td>
                                     <td>
                                     </td>
@@ -61,7 +61,7 @@
                         </td>
                     </tr>
                 </table>
-                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:9pt;  ">
+                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:16pt;  ">
                    <tr>
                      <td style="width:22%; ">
                          <table style=" border:0px solid white; width:100%;  ">
@@ -84,7 +84,7 @@
                      </td>
                    </tr>
                 </table>
-                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:9pt;  ">
+                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:16pt;  ">
                    <tr>
                      <td style="width:10%;">Teléfono</td>
                        <td style="width:30%;">01 (55) 5576 - 0663 y 01 (55) 5576 - 0674</td>
@@ -100,10 +100,10 @@
                         <td style="width:30%;"></td>
                    </tr>
                 </table><br/>
-                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:9pt;  ">
+                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:16pt;  ">
                    <tr>
                      <td style="width:70%; border:1px solid black;">
-                         <table style=" border-top:1px solid black; width:100%;font-family:Arial, sans-serif;font-size:9pt;  ">
+                         <table style=" border-top:1px solid black; width:100%;font-family:Arial, sans-serif;font-size:16pt;  ">
                            <tr>
                              <td>
                                  <b>Facturado a:</b>(<span t-field="o.partner_id.ref"/>) <span t-field="o.partner_id.name"/>
@@ -113,27 +113,16 @@
                                 <td>
                                     Calle:
                                   <span t-field="o.partner_id.street_name"/>
-                                   No. ext <span t-field="o.partner_id.street_number"/> No. int<span t-field="o.partner_id.street_number2"/>,
+                                   No. ext <span t-field="o.partner_id.street_number"/>
+                                    <span t-if="o.partner_id.street_number2">
+                                        No. int <span t-field="o.partner_id.street_number2"/>
+                                    </span>,
                                    <span t-if="o.partner_id.l10n_mx_edi_colony">
-                                        Col.<span t-field="o.partner_id.l10n_mx_edi_colony"/>
+                                        Col. <span t-field="o.partner_id.l10n_mx_edi_colony"/>
                                    </span>
                                 </td>
                            </tr>
-                           <tr>
-                                <td>
-                                    Calle:
-                                  <span t-field="o.partner_id.street_name"/>
-                                   No. ext <span t-field="o.partner_id.street_number"/> No. int<span t-field="o.partner_id.street_number2"/>,
-                                   <span t-if="o.partner_id.l10n_mx_edi_colony">
-                                        Col.<span t-field="o.partner_id.l10n_mx_edi_colony"/>
-                                   </span>
-                                </td>
-                           </tr>
-                             <tr>
-                                <td>
-                                  <b>Proveedor:</b>
-                                </td>
-                           </tr>
+
                              <tr>
                                 <td>
                                       <b>No Pedido:</b><span t-field="o.origin"/>
@@ -152,45 +141,45 @@
                            <b>Régimen Fiscal:</b>
                            <span t-field="o.fiscal_position_id.name"/><br/>
                            <b>Lugar Expedición:</b><br/>
-                          <span>Calle:</span> <span t-field="o.company_id.street_name"/>
-                           <span>No.</span><span t-field="o.company_id.street_number"/>
-                            <span>Colonia</span><span t-field="o.company_id.street2"/>
-                           <span>CP.</span><span t-field="o.company_id.zip"/>
-                           <span t-field="o.company_id.l10n_mx_edi_locality"/><span t-field="o.company_id.state_id.name"/>
+                          <span>Calle: </span> <span t-field="o.company_id.street_name"/>
+                           <span> No. </span><span t-field="o.company_id.street_number"/>
+                            <span> Colonia </span><span t-field="o.company_id.street2"/>
+                           <span> CP. </span><span t-field="o.company_id.zip"/>
+                           <span t-field="o.company_id.l10n_mx_edi_locality"/> <span t-field="o.company_id.state_id.name"/>
 
                        </td>
                    </tr>
                 </table>
-                <b>Observaciones</b>
-                <table style="font-family:Arial, sans-serif;font-size:9pt;">
+                <b style="font-size:16pt;">Observaciones</b>
+                <table style="font-family:Arial, sans-serif;font-size:16pt; width:100%;">
                 <thead>
                     <tr>
-                        <th style="width:15%;text-align:center; border-top:1px solid black;">Cantidad</th>
+                        <th style="width:10%;text-align:center; border-top:1px solid black;">Cantidad</th>
                         <th style="width:10%;text-align:center;border-top:1px solid black;">Unidad</th>
-                        <th style="width:40%; border-top:1px solid black; ">Descripción</th>
+                        <th style="width:55%; border-top:1px solid black; ">Descripción</th>
                         <th style="width:12%; border-top:1px solid black;" class="text-right;">Precio Unitario   </th>
                         <th style="width:13%; border-top:1px solid black;" class="text-right;">Importe  Total </th>
                     </tr>
                 </thead>
                 <tbody class="invoice_tbody">
                     <tr t-foreach="o.invoice_line_ids" t-as="l">
-                        <td class="text-right" style="border-botoom:1px solid black;"><span t-field="l.quantity"/></td>
+                        <td  style="border-botoom:1px solid black;text-align:center;"><span t-field="l.quantity"/></td>
                         <td style="text-align:center;border-botoom:1px solid black"><span t-field="l.uom_id"/></td>
                         <td style="border-botoom:1px solid black;"><span t-field="l.name"/></td>
-                        <td class="text-right" style="border-botoom:1px solid black;"><span t-field="l.price_unit"/></td>
-                        <td class="text-right" style="border-botoom:1px solid black;"><span t-field="l.price_subtotal" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
+                        <td style="border-botoom:1px solid black; text-align:center;"><span t-field="l.price_unit"/></td>
+                        <td  style="border-botoom:1px solid black;"><span t-field="l.price_subtotal" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
                         </td>
                     </tr>
                 </tbody>
             </table>
 
-            <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:9pt; ">
+            <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:16pt; ">
                <tr>
                  <td style="width:50%;">
-                     <img t-att-src="'/report/barcode/QR/%s' % quote_plus('?') + keep_query(                                 re=o.l10n_mx_edi_cfdi_supplier_rfc, rr=o.l10n_mx_edi_cfdi_customer_rfc,                                 tt=o.l10n_mx_edi_cfdi_amount, id=o.l10n_mx_edi_cfdi_uuid)" style="width:4cm;height:4cm;"/>
+                     <img t-att-src="'/report/barcode/QR/%s' % quote_plus('?') + keep_query(                                 re=o.l10n_mx_edi_cfdi_supplier_rfc, rr=o.l10n_mx_edi_cfdi_customer_rfc,                                 tt=o.l10n_mx_edi_cfdi_amount, id=o.l10n_mx_edi_cfdi_uuid)" style="width:6cm;height:6cm;"/>
                  </td>
                    <td style="width:50%;">
-                       <table style="border: #f56b00 3px dotted;; width:100%;font-family:Arial, sans-serif;font-size:9pt; width:100%; ">
+                       <table style="border: #f56b00 3px dotted;; width:100%;font-family:Arial, sans-serif;font-size:16pt; width:100%; ">
                            <tr>
                              <td style="width:60%;">
                                 <b>Subtotal:</b>
@@ -249,10 +238,10 @@
                    </td>
                </tr>
             </table><br/>
-                <div style="border:1px solid black;font-family:Arial, sans-serif;font-size:9pt; ">
+                <div style="border:1px solid black;font-family:Arial, sans-serif;font-size:16pt; ">
                     <b t-esc="o.l10n_mx_edi_amount_to_text()"/>
                 </div>
-                 <div style="border:1px solid black;background:#f56b00;text-align:center;font-family:Arial, sans-serif;font-size:9pt; ">
+                 <div style="border:1px solid black;background:#f56b00;text-align:center;font-family:Arial, sans-serif;font-size:16pt; ">
                     <span>"Este documento es una representación impresa de un CFDI"</span>
                 </div>
                 <t t-if="o.l10n_mx_edi_cfdi_uuid">
@@ -261,7 +250,7 @@
                     <t t-set="tfd" t-value="o.l10n_mx_edi_get_tfd_etree(xml)"/>
                     <t t-set="tfd_original_string" t-value="o._get_l10n_mx_edi_cadena()"/>
                 </t>
-                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:9pt;  ">
+                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:16pt;  ">
                    <tr>
                      <td style="width:50%;">
                          <b>Folio Fiscal:</b><span t-esc="tfd.get('UUID')"/>
@@ -271,17 +260,17 @@
                        </td>
                    </tr>
                 </table>
-                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:9pt;  ">
+                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:16pt;  ">
                    <tr><td>
                      <b>Sello Digital CFDI:</b></td>
                    </tr>
-                     <tr style="font-size:8pt;">
+                     <tr style="font-size:16pt;">
                        <td> <span t-esc="xml.get('sello', xml.get('Sello', 'No identificado'))"/></td>
                    </tr>
                 </table>
-                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:9pt;  ">
+                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:16pt;  ">
                    <tr>
-                     <td style="width:50%;">
+                     <td style="width:50%; ">
                          <b>Número de serie del Certificado de Sello Digital:</b><br/>
                           <span t-esc="xml.get('noCertificado', xml.get('NoCertificado'))"/>
                      </td>
@@ -291,25 +280,25 @@
                    </tr>
 
                 </table>
-                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:9pt;  ">
+                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:16pt;  ">
                    <tr><td>
                      <b>Cadena original del complemento de certificación digital del SAT:</b></td>
                    </tr>
-                     <tr style="font-size:8pt; ">
+                     <tr style="font-size:14pt ">
                        <td> <span t-esc="tfd.get('selloSAT', tfd.get('SelloSAT', 'No identificado'))"/></td>
                    </tr>
                 </table>
 
-                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:9pt;  ">
-                   <tr>
-                     <b>Sello Digital del SAT:</b>
+                <table style=" border:0px solid white; width:100%;font-family:Arial, sans-serif;font-size:16pt;  ">
+                   <tr><td> <b>Sello Digital del SAT:</b></td>
+
                    </tr>
-                     <tr style="font-size:8pt; ">
-                        <span class="nowrap" t-esc="tfd_original_string"/>
+                     <tr style="font-size:14pt ">
+                       <td><span class="nowrap" t-esc="tfd_original_string"/></td>
                    </tr>
                 </table>
                 <b style="text-aling:center;">DATOS BANCARIOS</b>
-                <table style=" border:1px solid black; width:100%;font-family:Arial, sans-serif;font-size:9pt;  ">
+                <table style=" border:1px solid black; width:100%;font-family:Arial, sans-serif;font-size:16pt;  ">
                    <tr style="text-align:center;">
                      <td style="width:20%; border-bottom:1px solid black; border-right:1px solid black;"><b>Oficina:</b></td>
                        <td style="width:10%;border-bottom:1px solid black; border-right:1px solid black;"><b>Banco</b></td>
@@ -357,7 +346,7 @@
                    </tr>
 
                 </table>
-                <div style="background:#bdbdbd;font-family:Arial, sans-serif;font-size:9pt; ">
+                <div style="background:#bdbdbd;font-family:Arial, sans-serif;font-size:16pt; ">
                     Valor recibido a mi (nuestra) entera satisfacción. Este pagaré forma parte de una serie numerada del 1 al 1 y todos están sujetos a la condición de que,
                     al no pagarse cualquiera de ellos a su vencimiento, serán exigibles todos los que le sigan en número, además de los ya vencidos desde la fecha de
                     vencimiento de éste documento hasta el día de su liquidación, causará intereses moratorios al tipo de 3% mensual, pagadero en ésta ciudad juntamente
