--- a/reports/invoice_report.xml
+++ b/reports/invoice_report.xml
@@ -51,11 +51,15 @@
                                     <td><span t-field="o.date_invoice"/></td>
                                 </tr><tr>
                                     <td><b>Forma de pago:</b></td>
-                                    <td> <span t-field="o.payment_term_id.name"/></td>
+                                    <td> <span t-field="o.l10n_mx_edi_payment_method_id.code"/></td>
                                 </tr>
                                 <tr>
                                   <td><b>Metódo de Pago y Cuenta</b></td>
-                                  <td><span t-field="o.l10n_mx_edi_payment_method_id"/></td>
+                                  <td><span t-field="o.l10n_mx_edi_payment_method_id.name"/></td>
+                                </tr>
+                                <tr>
+                                  <td><b>Uso CFDI</b></td>
+                                  <td><span t-field="o.l10n_mx_edi_usage"/></td>
                                 </tr>
 
                             </table>
@@ -404,11 +408,15 @@
                                     <td><span t-field="o.date_invoice"/></td>
                                 </tr><tr>
                                     <td><b>Forma de pago:</b></td>
-                                    <td> <span t-field="o.payment_term_id.name"/></td>
+                                    <td> <span t-field="o.l10n_mx_edi_payment_method_id.code"/></td>
                                 </tr>
                                 <tr>
                                   <td><b>Metódo de Pago y Cuenta</b></td>
-                                  <td><span t-field="o.l10n_mx_edi_payment_method_id"/></td>
+                                  <td><span t-field="o.l10n_mx_edi_payment_method_id.name"/></td>
+                                </tr>
+                                <tr>
+                                  <td><b>Uso CFDI</b></td>
+                                  <td><span t-field="o.l10n_mx_edi_usage"/></td>
                                 </tr>
 
                             </table>
